src/objects/Interest_Description__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Code__c</fullName>
        <label>Quality Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Interest Description</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intersst Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>